// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should display field level error when password does not fulfill requirements 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <figure
                      class="MuiBox-root emotion-24"
                      data-se="password-authenticator--rules"
                      id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                    >
                      <figcaption
                        class="password-authenticator--heading MuiBox-root emotion-1"
                      >
                        Password requirements:
                      </figcaption>
                      <ul
                        class="MuiBox-root emotion-26"
                        id="password-authenticator--list"
                      >
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                At least 8 characters
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                A lowercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                An uppercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                A number
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                No parts of your username
                              </p>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </figure>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd emotion-75"
                        required="true"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-errormessage="credentials.passcode-error"
                          aria-invalid="true"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="new-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-61"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-77"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-78"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-filled emotion-80"
                        id="credentials.passcode-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          Password requirements were not met:
                          <ul
                            class="MuiList-root MuiList-dense emotion-83"
                          >
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-84"
                            >
                              At least 8 characters
                            </li>
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-84"
                            >
                              An uppercase letter
                            </li>
                          </ul>
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-87"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-89"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-90"
                  >
                    <div
                      class="MuiBox-root emotion-91"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-91"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-95"
                        data-se="back"
                        href=""
                      >
                        Sign In
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should display field level error when password field is required but is not filled 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <figure
                      class="MuiBox-root emotion-24"
                      data-se="password-authenticator--rules"
                      id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                    >
                      <figcaption
                        class="password-authenticator--heading MuiBox-root emotion-1"
                      >
                        Password requirements:
                      </figcaption>
                      <ul
                        class="MuiBox-root emotion-26"
                        id="password-authenticator--list"
                      >
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                At least 8 characters
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                A lowercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                An uppercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                A number
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-27"
                        >
                          <div
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-29"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-30"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-32"
                              >
                                No parts of your username
                              </p>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </figure>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-60"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-61"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-58"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-59"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd emotion-75"
                        required="true"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-errormessage="credentials.passcode-error"
                          aria-invalid="true"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="new-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-61"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-77"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-78"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-80"
                        id="credentials.passcode-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-84"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-86"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-87"
                  >
                    <div
                      class="MuiBox-root emotion-88"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-88"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-92"
                        data-se="back"
                        href=""
                      >
                        Sign In
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <figure
                      class="MuiBox-root emotion-17"
                      data-se="password-authenticator--rules"
                      id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                    >
                      <figcaption
                        class="password-authenticator--heading MuiBox-root emotion-1"
                      >
                        Password requirements:
                      </figcaption>
                      <ul
                        class="MuiBox-root emotion-19"
                        id="password-authenticator--list"
                      >
                        <li
                          class="MuiBox-root emotion-20"
                        >
                          <div
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-22"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-25"
                              >
                                At least 8 characters
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-20"
                        >
                          <div
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-22"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-25"
                              >
                                A lowercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-20"
                        >
                          <div
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-22"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-25"
                              >
                                An uppercase letter
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-20"
                        >
                          <div
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-22"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-25"
                              >
                                A number
                              </p>
                            </div>
                          </div>
                        </li>
                        <li
                          class="MuiBox-root emotion-20"
                        >
                          <div
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              aria-hidden="true"
                              class="passwordRequirementIcon MuiBox-root emotion-22"
                            >
                              <svg
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                role="img"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <title>
                                  info
                                </title>
                              </svg>
                            </div>
                            <div
                              class="MuiBox-root emotion-1"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-25"
                              >
                                No parts of your username
                              </p>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </figure>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-51"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-52"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-53"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-54"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-51"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-52"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-53"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-54"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-51"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-52"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-53"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-54"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-51"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-52"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd emotion-68"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="new-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-54"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-70"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-71"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-72"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-74"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-76"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-77"
                  >
                    <div
                      class="MuiBox-root emotion-78"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-78"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-82"
                        data-se="back"
                        href=""
                      >
                        Sign In
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
